2007-08-12  Brian Warner  <warner@lothar.com>

	* buildbot/buildslave.py (BuildSlave.messageReceivedFromSlave):
	use the BuildSlave to keep track of the last time we've heard from
	the buildslave. This is updated upon receipt of any message from
	any SlaveBuilder (which generally means when RemoteCommands are
	giving us status updates, as BuildSteps run). In the future this
	will include slave pings too.
	* buildbot/process/base.py
	(Build.setupBuild): give each BuildStep a reference to the BuildSlave
	* buildbot/process/buildstep.py:
	(BuildStep.setBuildSlave): accept that reference
	(BuildStep.runCommand): pass the reference on to the RemoteCommand
	(RemoteCommand.remote_update): update the timestamp
	(RemoteCommand.remote_complete): same
	* buildbot/test/runutils.py (StepTester.makeStep): match the change
	* buildbot/test/test_steps.py (BuildStep.testShellCommand1): same
	* buildbot/interfaces.py (ISlaveStatus.lastMessageReceived): new
	interface to retrieve this timestamp
	* buildbot/status/builder.py (SlaveStatus): track a copy of the
	timestamp


	* buildbot/status/web/baseweb.py (OneLineMixin.make_line): tighten
	up the format a bit
	(OneLinePerBuild.body): use a <ul> instead of <div>s
	(OneLinePerBuildOneBuilder.body): same

	* contrib/darcs_buildbot.py (makeChange): handle moved files too,
	by adding the file's new name to the list of changed files. This
	ought to be sufficient for things like isFileImportant and trial
	tests that only exercise tests for files that have been modified.
	Closes #31.

	* buildbot/status/web/xmlrpc.py (XMLRPCServer): add preliminary
	XMLRPC server to the WebStatus page. This only has two methods
	right now (getAllBuildsInInterval and getBuild), but we'll be
	adding more in the future. This server is extracted from the
	trac-plugin branch.

	* buildbot/status/web/baseweb.py (OneLinePerBuild): refactor using
	generateFinishedBuilds, and improve the data displayed.
	* buildbot/status/web/build.py (StatusResourceBuild): rearrange